--- a/BlackBoard/BlackBoard-Info.plist
+++ b/BlackBoard/BlackBoard-Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.calsoftlabs.clearpath.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>com.calsoftlabs.clearpath</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
